<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/about_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/action_about"
        android:textSize="30sp"
        android:textStyle="bold"
        android:hyphenationFrequency="none"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/about_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:text="@string/about_about"
            android:textAlignment="center"
            android:textSize="18sp"
            android:hyphenationFrequency="none" />

        <TextView
            android:id="@+id/about_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:text="@string/about_libraries_one"
            android:textAlignment="center"
            android:textSize="18sp"
            android:hyphenationFrequency="none"/>

        <TextView
            android:id="@+id/about_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:text="@string/about_libraries_two"
            android:textAlignment="center"
            android:textSize="18sp"
            android:hyphenationFrequency="none"/>

        <TextView
            android:id="@+id/about_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hyphenationFrequency="none"
            android:padding="10dp"
            android:text="@string/about_libraries_three"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/about_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:text="@string/about_svg"
            android:textAlignment="center"
            android:textSize="18sp"
            android:hyphenationFrequency="none"/>

        <TextView
            android:id="@+id/about_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:text="@string/about_font"
            android:textAlignment="center"
            android:textSize="18sp"
            android:hyphenationFrequency="none"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>